/* 
  Localizable.strings
  CookConversion

  Created by Gabriel on 11/5/21.
  
*/

"enabled-precise-measures" = "ENABLED PRECISE MEASURES";
"enabled-common-measures" = "ENABLED COMMON MEASURES";
"language-settings" = "LANGUAGE SETTINGS";
"language" = "Language";
"precision-info" = "PRECISION INFO";
"know-more-about-precision" = "Know More About The Precision";
"precision-title" = "Precision";
"precision-text" = "Not all conversions have a 100% precise result. That's because conversions involving volume to weight need the specific density of the ingredient to be more precise. In future updates we'll add options to select specific ingredients, which in some cases improve precision. But, if you need really precise measures, no conversion application will be good enough.";

"settings" = "Settings";
"convert" = "Convert";
"close" = "Close";
"empty-number" = "Type a value first";
"invalid-number" = "Typed value is not a number";
"too-high-number" = "Value can't be higher than 5000";

"ounces" = "Ounces";
"fluid-ounces" = "Fluid Ounces";
"gallons" = "Gallons";
"grams" = "Grams";
"kilograms" = "Kilograms";
"milliliters" = "Milliliters";
"liters" = "Liters";

"teaspoons" = "Teaspoons";
"tablespoons" = "Tablespoons";
"teacups" = "Teacups";
"cups" = "Cups";

"fluid-ounces-abbreviated" = "fl. oz.";
"ounces-abbreviated" = "oz.";
"gallons-abbreviated" = "gal.";
"grams-abbreviated" = "g";
"kilograms-abbreviated" = "kg";
"milliliters-abbreviated" = "mL";
"liters-abbreviated" = "L";

"teaspoons-abbreviated" = "tsp.";
"tablespoons-abbreviated" = "tbsp.";
