...
        Button(action: { cookConversionViewModel.decreaseCurrentTypedValueByOne() }, label: {
          RoundedRectangle(cornerRadius: 10, style: .continuous)
            .frame(width: 40, height: 40)
            .foregroundColor(Color.lightGray)
            .overlay(Text("-").font(.title3).bold().foregroundColor(Color.blackDarkSensitive))
        })
          .accessibilityLabel("Decrease")
          .accessibilityHint("Tap to increase current input value by one")
          .accessibility(sortPriority: 1)
        Button(action: { cookConversionViewModel.increaseCurrentTypedValueByOne() }, label: {
          RoundedRectangle(cornerRadius: 10, style: .continuous)
            .frame(width: 40, height: 40)
            .foregroundColor(Color.lightGray)
            .overlay(Text("+").font(.title3).bold().foregroundColor(Color.blackDarkSensitive))
        })
          .accessibilityLabel("Increase")
          .accessibilityHint("Tap to increase current input value by one")
          .accessibility(sortPriority: 1)
      }
    }
  }

...
