...
      }
    }

    var languageFullName: String {
      switch self {
      case .english:
        return "English"
      case .portuguese:
        return "Português"
      case .spanish:
        return "Español"
      case .french:
        return "Français"
      case .chinese:
        return "中文"
...
