...
          Section {
            Picker( LocalizedStringKey("language").stringValue() , selection: $cookConversionViewModel.currentLanguage) {
              ForEach(CookConversionModel.AvailableLanguages.allCases, id: \.self) {
                Text($0.languageFullName)
              }
            }
            .accessibilityIdentifier("languageButton")
          }
        }
        Section(header: Text( LocalizedStringKey("precision-info").stringValue() )) {
          
          Section {
            NavigationLink(destination: PrecisionInfoScreen()) {
...
